--- a/.github/workflows/miracle.yml
+++ b/.github/workflows/miracle.yml
@@ -31,7 +31,10 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-
+      
+  #    - name: Destroy infra
+  #      run: teerraform destroy
+       
       - name: Initialize Terraform
         run: terraform init
 
