--- a/.github/workflows/miracle.yml
+++ b/.github/workflows/miracle.yml
@@ -31,6 +31,13 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
+
+      - name: Add SSH Key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.AWS_SSH_PRIVATE_KEY }}" > ~/.ssh/my-key
+          chmod 600 ~/.ssh/my-key
+
       
   #    - name: Destroy infra
   #      run: teerraform destroy
