--- a/.github/workflows/miracle.yml
+++ b/.github/workflows/miracle.yml
@@ -55,7 +55,9 @@ jobs:
         
       - name: Retrieve Instance IP
         run: |
-          echo "$(terraform output -raw instance_ip)" 
+          terraform output -raw instance_ip)
+          echo "now with echo"
+          echo $instance_ip
 
 
 
