--- a/.github/workflows/secondmiracle.yml
+++ b/.github/workflows/secondmiracle.yml
@@ -19,26 +19,28 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.AWS_SSH_PRIVATE_KEY }}
 
-
       - name: SSH and Install Ansible
         env:
           INSTANCE_IP: ${{ secrets.INSTANCE_IP }}
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.AWS_SSH_PRIVATE_KEY }}" > ~/.ssh/my-key
-          chmod 600 ~/.ssh/my-key
           echo "Connecting to instance at $INSTANCE_IP"
-          ssh -i ~/.ssh/my-key ec2-user@$13.48.181.112 << 'EOF'
-            sudo amazon-linux-extras enable ansible2
-            sudo yum install -y ansible
-            ansible --version
-          EOF
+          for i in {1..5}; do
+            ssh -o StrictHostKeyChecking=no -i ~/.ssh/my-key ec2-user@$13.48.181.112 << 'EOF'
+              sudo amazon-linux-extras enable ansible2
+              sudo yum install -y ansible
+              ansible --version
+            EOF
+            if [[ $? -eq 0 ]]; then break; fi
+            echo "Retrying SSH connection..."
+            sleep 10
+          done
 
       - name: Run Ansible Playbooks
         env:
-          INSTANCE_IP: ${{ env.INSTANCE_IP }}
+          INSTANCE_IP: ${{ secrets.INSTANCE_IP }}
         run: |
-          ssh -o StrictHostKeyChecking=no ec2-user@$INSTANCE_IP << 'EOF'
+          echo "Running Ansible playbooks on $INSTANCE_IP"
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/my-key ec2-user@$INSTANCE_IP << 'EOF'
             ansible-playbook /home/ec2-user/techtask/ansible/install_docker.yml
             ansible-playbook /home/ec2-user/techtask/ansible/deploy_monitoring.yml
             ansible-playbook /home/ec2-user/techtask/ansible/deploy_nginx.yml
