--- a/.github/workflows/miracle.yml
+++ b/.github/workflows/miracle.yml
@@ -39,25 +39,28 @@ jobs:
           chmod 600 ~/.ssh/my-key
 
       
-  #    - name: Destroy infra
-  #      run: teerraform destroy
+      - name: Destroy infra
+        run: teerraform destroy
        
       - name: Initialize Terraform
         run: terraform init
 
-      - name: Terraform Plan
-        run: terraform plan
-        id: plan
+      #- name: Terraform Plan
+      # run: terraform plan
+      #  id: plan
 
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/main'
-        run: terraform apply -auto-approve
+      #- name: Terraform Apply
+      #  if: github.ref == 'refs/heads/main'
+      #  run: terraform apply -auto-approve
         
       - name: Retrieve Instance IP
         run: |
           terraform output -raw instance_ip
           echo "now with echo"
           echo $instance_ip
+
+      - name: Destroy infra
+        run: teerraform destroy
 
 
 
