--- a/.github/workflows/miracle.yml
+++ b/.github/workflows/miracle.yml
@@ -60,7 +60,7 @@ jobs:
           echo $instance_ip
 
       - name: Destroy infra
-        run: teerraform destroy
+        run: terraform destroy
 
 
 
